# scf_guess_tools

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml  test.yml
recipe/: meta.yaml
scf_guess_tools/: __init__.py  builder.py  common.py  core.py  engine.py  matrix.py  metric.py  molecule.py  proxy.py  wavefunction.py
scf_guess_tools/psi/: __init__.py  auxilary.py  core.py  matrix.py  molecule.py  wavefunction.py
scf_guess_tools/psi4/: auxilary.py  engine.py  matrix.py  metric.py  molecule.py  wavefunction.py
scf_guess_tools/py/: __init__.py  core.py  matrix.py  molecule.py  wavefunction.py
scf_guess_tools/pyscf/: engine.py  matrix.py  metric.py  molecule.py  wavefunction.py
tests/: CuMe.xyz  ch2-trip.xyz  common.py  dft_testing.py  doit.py  provider.py  test_basic.py  test_cache.py  test_correctness.py  test_regression.py  test_time.py
tests/molecules/: properties.py  reference.py
tests/molecules/geometries/: AcCl.xyz  Co(C3H5)(CO)3.xyz  Co(CO)3(NO).xyz  Co(NH3)6.xyz  CoH(CO)4.xyz  Cr(C6H6)(CO)3.xyz  Cr(C6H6)2.xyz  Cr(CO)6.xyz  Cr(NO)4.xyz  CrF6.xyz  CrO2(NO3)2.xyz  CrO2Cl2.xyz  CrO2F2.xyz  CrO4_2-.xyz  Cu(acac)2.xyz  CuCN.xyz  ED01.xyz  ED02.xyz  ED03.xyz  ED04.xyz  ED05.xyz  ED14.xyz  ED15.xyz  ED27.xyz  ED28.xyz  ED30.xyz  ED31.xyz  ED40a.xyz  ED40b.xyz  Fe(C2H4)(CO)4.xyz  Fe(C4H4)(CO)3.xyz  Fe(C4H6)(CO)3.xyz  Fe(C5Me5)(P5).xyz  Fe(CO)2(NO)2.xyz  Fe(CO)3(tmm).xyz  Fe(CO)4(C2H4).xyz  Fe(CO)5.xyz  FeCp2.xyz  Mn(C5H5)(CO)3.xyz  Mn(CO)4NO.xyz  (+220 more)
