[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "scf_guess_tools"
version = "1.0"
requires-python = ">=3.8"
description = "A collection of tools for working with initial guesses in SCF methods"
readme = "README.md"
license = { file = "LICENSE.md" }
